# pjproject-cmake

./: .gitignore  CMakeLists.txt
pjlib/: CMakeLists.txt
pjlib-util/: CMakeLists.txt
pjmedia/: CMakeLists.txt
pjnath/: CMakeLists.txt
pjsip/: CMakeLists.txt
